tests/functional2/lang/line-endings-crlf/parse-fail-eol-3.err.exp
error: undefined variable 'invalid'
       at /pwd/in.nix:2:1:
            1| # foo
            2| invalid
             | ^
            3| # bar
